--- a/src/ru/design.html
+++ b/src/ru/design.html
@@ -46,9 +46,9 @@
 <body>
     <div class="wrapper">
         <div class="fullscreen">
-        
+            <img class="fullscreen__background marketing" src="../img/video-stop/bubble stop.png" alt="картинка на весь экран">
             <div class="fullscreen__title">
-                <img  src="../img/fullscreen/design-sign.png" alt="Marketing лого">
+                <img  src="../img/fullscreen/design-sign.png" alt="лого">
             </div>
             <video autoplay muted loop class="fullscreen__background" preload="auto">
                 <source type="video/webm" src="../files/video/design.webm">
