--- a/src/ru/it.html
+++ b/src/ru/it.html
@@ -58,7 +58,7 @@
 <body>
     <div class="wrapper">
         <div class="fullscreen">
-            <!-- <img class="fullscreen__background" src="../img/video-stop/plate-stop.jpg" alt="картинка на весь экран"> -->
+            <img class="fullscreen__background" src="../img/video-stop/plate-stop.jpg" alt="картинка на весь экран">
             <div class="fullscreen__title">
                 <img  src="../img/fullscreen/IT-sign.png" alt="IT лого">
             </div>
